tests/ui/not-panic/not-panic-safe-5.stderr
error[E0277]: the type `*const UnsafeCell<i32>` may not be safely transferred across an unwind boundary
  --> $DIR/not-panic-safe-5.rs:9:14
   |
LL |     assert::<*const UnsafeCell<i32>>();
   |              ^^^^^^^^^^^^^^^^^^^^^^ `*const UnsafeCell<i32>` may not be safely transferred across an unwind boundary
   |
   = help: the trait `UnwindSafe` is not implemented for `*const UnsafeCell<i32>`, which is required by `*const UnsafeCell<i32>: UnwindSafe`
   = note: required for `*const UnsafeCell<i32>` to implement `UnwindSafe`
note: required by a bound in `assert`
  --> $DIR/not-panic-safe-5.rs:6:14
   |
LL | fn assert<T: UnwindSafe + ?Sized>() {}
   |              ^^^^^^^^^^ required by this bound in `assert`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
